shrink box around character to avoid wrapping background near right edge. Pause game when the page loses focus.

--- a/style.css
+++ b/style.css
@@ -82,37 +82,37 @@ body {
   height: 72px;
   position: absolute;
   cursor: url(campaign/Descent_into_Darkness_2/images/cursors/move.png);
-  background-image: url(campaign/Descent_into_Darkness_2/images/misc/attack-indicator-dst-n.png);
+  background-image: url(campaign/Descent_into_Darkness_2/images/misc/attack-indicator-n.png);
   z-index: 1;
   opacity: 0.5;
 }
 #up {
-  left: 72px;
-  top: 0;
+  left: 0;
+  top: -72px;
 }
 #left {
   transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
   -moz-transform: rotate(-90deg);
   -o-transform: rotate(-90deg);
-  left: 0;
-  top: 72px;
+  left: -72px;
+  top: 0;
 }
 #right {
   transform: rotate(90deg);
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   -o-transform: rotate(90deg);
-  right: 0;
-  top: 72px;
+  right: -72px;
+  top: 0;
 }
 #down {
   transform: scaleY(-1);
   -webkit-transform: scaleY(-1);
   -moz-transform: scaleY(-1);
   -o-transform: scaleY(-1);
-  left: 72px;
-  bottom: 0;
+  left: 0;
+  bottom: -72px;
 }
 #up:hover {
   opacity: 1;
@@ -126,29 +126,29 @@ body {
 #down:hover {
   opacity: 1;
 }
-.moving div #up {visibility: hidden;}
-.moving div #down {visibility: hidden;}
-.moving div #left {visibility: hidden;}
-.moving div #right {visibility: hidden;}
+.moving div #up {display:none;}
+.moving div #down {display:none;}
+.moving div #left {display:none;}
+.moving div #right {display:none;}
 
 /* Characters */
 .character {
   position: absolute;
-  width: 216px;
-  height: 216px;
-  margin: -108px;
+  width: 72px;
+  height: 72px;
+  margin: -36px;
   left: 0px;
   top: 0px;
 }
 .character div {
   position: relative;
-  width: 216px;
-  height: 216px;
+  width: 72px;
+  height: 72px;
 }
 .character div img {
   position: absolute;
-  left: 108px;
-  top: 108px;
+  left: 36px;
+  top: 36px;
   z-index: 2;
 }
 
